# rust-gateway

./: .gitignore  Cargo.toml  README.md  build.rs
src/: random_number_service.rs
src/gateway/: main.rs
src/proto/: service.proto
src/server/: main.rs
